# mediasoup-example

./: .gitignore  .tool-versions  Cargo.toml
.github/workflows/: build.yml
client/aiortc/room/: package.json  requirements.txt  tsconfig.json
client/aiortc/room/src/: index.ts
client/c++/room/: CMakeLists.txt  README.md  main.cpp
client/room/: package.json  tsconfig.json
client/room/src/: index.ts
front/: package.json  webpack.config.js
front/data/: package.json
front/data/src/: index.ts
front/echo/: index.html  package.json
front/echo/src/: index.ts
front/room/: index.html  package.json  webpack.config.js
front/room/src/: index.ts
front/src/: echo.ts
server/: Cargo.toml
server/examples/: data.rs  echo.rs  room.rs
server/src/: main.rs
src/: main.rs
