[package]
name = "mediasoup-example"
version = "0.1.0"
edition = "2021"
lib = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.12"
actix-web-actors = "4.1.0"
serde_json = "1.0.67"
mediasoup = "0.9.3"
serde = "1.0.137"
