[package]
name = "mediasoup-example"
version = "0.1.0"
edition = "2021"
lib = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.12"
actix-web-actors = "4.1.0"
serde_json = "1.0.67"
mediasoup = "0.11"
serde = "1.0.137"
async-lock = "2.5.0"
parking_lot = "0.12"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]